<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/contact_widget_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/contact_details_bg"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingLeft="35dp"
    android:paddingRight="35dp"
    android:paddingTop="15dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/create_contact_enter_details_header"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/contactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_name" />

    <EditText
        android:id="@+id/contactSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_surname" />

    <EditText
        android:id="@+id/contactTelNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_telnum"
        android:inputType="number" />

    <Button
        android:id="@+id/contactViewSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_contact_view_summary_button" />

</LinearLayout>