<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/contact_widget_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/contact_details_bg"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingLeft="35dp"
    android:paddingRight="35dp"
    android:paddingTop="15dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/contact_details_summary_header"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/contactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_name"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/contactSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_surname"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/contactTelNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_telnum"
        android:textColor="@android:color/white" />

</LinearLayout>